fix scroll horizontal e overflow

--- a/web/src/assets/main.css
+++ b/web/src/assets/main.css
@@ -8,10 +8,11 @@
 
 html,
 body {
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  width: 100%;
   margin: 0;
 }
+
 #app {
   height: inherit;
     width: inherit;
